:sparkles: Feat: HomeResponse의 GroupDto에 role 필드 추가 및 서비스 로직 반영